Moved all features from AMASS menu to CHESS menu. Removed AMASS menu
Change-Id: I617b719c9234d5ea809d5f7723c595f41111c54e
Signed-off-by: Alberto Debiasi <adebiasi@fbk.eu>

--- a/plugins/contracts/org.polarsys.chess.contracts.transformations/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.transformations/plugin.xml
@@ -153,7 +153,7 @@
    </extension>
     <extension
          point="org.eclipse.ui.menus">
-      <menuContribution
+     <!-- <menuContribution
             allPopups="false"
             locationURI="popup:org.eclipse.papyrus.views.modelexplorer.modelexplorer.popup">
          <menu
@@ -180,6 +180,16 @@
                </visibleWhen>
             </command>
          </menu>
+      </menuContribution> -->
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.eclipse.ui.main.diagramEditorMenu.CHESS.basicOperations">
+         <command
+               commandId="org.polarsys.chess.contracts.transformations.smv.id"
+               id="org.polarsys.chess.contracts.transformations.smv.id"
+               label="Export as SMV"
+               style="push">
+         </command>
       </menuContribution>
    </extension>
 </plugin>
