--- a/plugins/contracts/org.polarsys.chess.contracts.safetyAnalysis/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.safetyAnalysis/plugin.xml
@@ -5,48 +5,65 @@
          point="org.eclipse.ui.menus">
          <menuContribution
             allPopups="false"            
-            locationURI="menu:org.eclipse.ui.main.menu.AMASS?after=org.eclipse.ui.main.menu.AMASS.funcVer">             
+            locationURI="menu:org.eclipse.ui.main.menu.AMASS?after=org.eclipse.ui.main.menu.CHESS.funcVer">             
               <menu
-               label="Safety Analysis">
-               <menu
-                       label="//Debug Operations">
-                       <command
-                          commandId="org.polarsys.chess.safetyAnalysis.commands.debug.ComputeContractFaultTreeOnFileCommand"
-                          style="push">
-                    </command>
-                       </menu>
-                 <menu
-                       label="Fault Tree Viewer">
-                    <command
-                          commandId="eu.fbk.eclipse.standardtools.faultTreeViewer.commands.ShowFaultTreeFromXmlFileCommand"
-                          style="push">
-                    </command>
-                 </menu>
-                <command
-                  commandId="org.polarsys.chess.safetyAnalysis.commands.ComputeContractFaultTreeCommand"
-                  style="push">
-            </command>         
+                    id="org.eclipse.ui.main.menu.CHESS.safetyAnalysis"
+                    label="Safety Analysis">
                </menu>
       </menuContribution>
       <menuContribution
             allPopups="false"            
-            locationURI="popup:org.eclipse.ui.main.diagramEditorMenu.AMASS?after=org.eclipse.ui.main.diagramEditorMenu.AMASS.funcVer">              
+            locationURI="popup:org.eclipse.ui.main.diagramEditorMenu.AMASS?after=org.eclipse.ui.main.diagramEditorMenu.CHESS.funcVer">              
            <menu
                label="Safety Analysis"
-            id="org.eclipse.ui.main.diagramEditorMenu.AMASS.safetyAnalysis">
-           <menu
-                       label="Fault Tree Viewer">
-                    <command
-                          commandId="eu.fbk.eclipse.standardtools.faultTreeViewer.commands.ShowFaultTreeFromXmlFileCommand"
-                          style="push">
-                    </command>
-                 </menu>
-                <command
+            id="org.eclipse.ui.main.diagramEditorMenu.CHESS.safetyAnalysis">
+               </menu>
+              </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="menu:org.polarsys.chess.mainMenu?after=org.eclipse.ui.main.menu.CHESS.funcVer">
+         <menu
+               id="org.eclipse.ui.main.menu.CHESS.safetyAnalysis"
+               label="Safety Analysis">
+            <menu
+                  label="//Debug Operations">
+               <command
+                     commandId="org.polarsys.chess.safetyAnalysis.commands.debug.ComputeContractFaultTreeOnFileCommand"
+                     style="push">
+               </command>
+            </menu>
+            <menu
+                  label="Fault Tree Viewer">
+               <command
+                     commandId="eu.fbk.eclipse.standardtools.faultTreeViewer.commands.ShowFaultTreeFromXmlFileCommand"
+                     style="push">
+               </command>
+            </menu>
+            <command
                   commandId="org.polarsys.chess.safetyAnalysis.commands.ComputeContractFaultTreeCommand"
                   style="push">
-            </command>         
-               </menu>
-              </menuContribution>          
+            </command>
+         </menu>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.polarsys.chess.modelexplorerpopupmenu.id?after=org.eclipse.ui.main.diagramEditorMenu.CHESS.funcVer">
+         <menu
+               id="org.eclipse.ui.main.diagramEditorMenu.CHESS.safetyAnalysis"
+               label="Safety Analysis">
+            <menu
+                  label="Fault Tree Viewer">
+               <command
+                     commandId="eu.fbk.eclipse.standardtools.faultTreeViewer.commands.ShowFaultTreeFromXmlFileCommand"
+                     style="push">
+               </command>
+            </menu>
+            <command
+                  commandId="org.polarsys.chess.safetyAnalysis.commands.ComputeContractFaultTreeCommand"
+                  style="push">
+            </command>
+         </menu>
+      </menuContribution>          
           </extension>
  <extension
          point="org.eclipse.ui.commands">
