small updates, added missing copyright license to few classes
Change-Id: If63ec95603977ee4a6e2b607f2ad83e653878502
Signed-off-by: Alberto Debiasi <adebiasi@fbk.eu>

--- a/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
@@ -196,7 +196,7 @@
        <command
             defaultHandler="org.polarsys.chess.verificationService.commands.debug.ContractImplementationOnFileCommand"
             			id="org.polarsys.chess.verificationService.commands.debug.ContractImplementationOnFileCommand"
-            name="Check Contract Implementation on .oss and .fmv files">
+            name="Check Contract Implementation on .oss and .smv files">
       </command>
       <command
             defaultHandler="org.polarsys.chess.verificationService.commands.ExportModelToFileCommand"
