Removed some static keywords, fixed small changes in some manifest.mf
Change-Id: I95c8c212263b7ede978e7749dce5ca8b60790f22
Signed-off-by: Alberto Debiasi <adebiasi@fbk.eu>

--- a/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
@@ -95,6 +95,7 @@
                      id="org.eclipse.ui.main.menu.CHESS.basicOperation"
                      label="Basic Operations">
                   <menu
+                        id="org.eclipse.ui.main.menu.CHESS.basicOperation.debug"
                         label="//Debug Operations">
                      <command
                            commandId="org.polarsys.chess.verificationService.commands.debug.RuntimeErrorsOnFileCommand"
