- improved smv export for nominal state machines - renamed one method of JobCommand - added methods to StateMachineModel class - removed commented code - formatted code
Change-Id: I66f06da83105fa51317df620623b325f3f493f6e
Signed-off-by: Alberto Debiasi <adebiasi@fbk.eu>

--- a/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
@@ -86,6 +86,10 @@
                         commandId="org.polarsys.chess.verificationService.commands.ModelCheckingCommand2"
                         style="push">
                   </command>
+                  <command
+                        commandId="org.polarsys.chess.verificationService.commands.CompositeContractImplementationCommand"
+                        style="push">
+                  </command>
                </menu>
             </menuContribution>
             <menuContribution
@@ -150,6 +154,10 @@
                   </command>
                   <command
                         commandId="org.polarsys.chess.verificationService.commands.ModelCheckingCommand2"
+                        style="push">
+                  </command>
+                  <command
+                        commandId="org.polarsys.chess.verificationService.commands.CompositeContractImplementationCommand"
                         style="push">
                   </command>
                </menu>
@@ -228,6 +236,11 @@
             defaultHandler="org.polarsys.chess.verificationService.commands.debug.CheckValidationPropertyOnFileCommand"
             id="org.polarsys.chess.verificationService.commands.debug.CheckValidationPropertyOnFileCommand"
             name="Check Validation Property on .oss file">
+      </command>
+      <command
+            defaultHandler="org.polarsys.chess.verificationService.commands.CompositeContractImplementationCommand"
+            id="org.polarsys.chess.verificationService.commands.CompositeContractImplementationCommand"
+            name="Check Composite Contract Implementation on selected component">
       </command>
    </extension> 
 </plugin>
