created the CHESS category for the views
Change-Id: I730bdc1f2e9c8dbca94b423d14a0fbdc0b5c7c92

--- a/plugins/contracts/org.polarsys.chess.contracts.hierarchicalContractView/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.hierarchicalContractView/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.ui.views">
       <view
-            category="org.eclipse.papyrus.views.category"
+            category="org.polarsys.chess.views.category"
             class="org.polarsys.chess.contracts.hierarchicalContractView.view.CustomHierarchicalView"
             icon="icons/site_element.gif"
             id="org.polarsys.chess.contracts.hierarchicalContractView.view1"
