--- a/plugins/contracts/org.polarsys.chess.contracts.refinementView/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.refinementView/plugin.xml
@@ -4,13 +4,17 @@
    <extension
          point="org.eclipse.ui.views">
       <view
-            category="org.eclipse.papyrus.views.category"
+            category="org.polarsys.chess.views.category"
             class="org.polarsys.chess.contracts.refinementView.view.CustomRefinementView"
             icon="icons/main_tab.gif"
             id="org.polarsys.chess.contracts.refinementView.view1"
             name="Contract Refinement View"
             restorable="true">
       </view>
+      <category
+            id="org.polarsys.chess.views.category"
+            name="CHESS">
+      </category>
    </extension>
    <extension
          point="org.eclipse.papyrus.infra.core.modelListener">
