Renamed org.polarsys.chess.smvExport to org.polarsys.chess.smvExporter
Change-Id: I27ea2402b082fde2bb719a347bf272d893cfeb63

--- a/plugins/org.polarsys.chess.smvExport/.project
+++ b/plugins/org.polarsys.chess.smvExport/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.polarsys.chess.smvExport</name>
+	<name>org.polarsys.chess.smvExporter</name>
 	<comment></comment>
 	<projects>
 	</projects>
