--- a/plugins/org.polarsys.chess.smvExport/plugin.xml
+++ b/plugins/org.polarsys.chess.smvExport/plugin.xml
@@ -4,12 +4,12 @@
    <extension
          point="org.eclipse.ui.commands">
       <command
-            defaultHandler="org.polarsys.chess.smvExport.commands.ExportNominalSMsToSmvFilesCommand"
+            defaultHandler="org.polarsys.chess.smvExporter.commands.ExportNominalSMsToSmvFilesCommand"
             id="org.polarsys.chess.smvExport.commands.ExportNominalSMsToSmvFilesCommand"
             name="Export state machines as .smv files">
       </command>
       <command
-            defaultHandler="org.polarsys.chess.smvExport.commands.ExportSelectedNominalSMsToSmvFilesCommand"
+            defaultHandler="org.polarsys.chess.smvExporter.commands.ExportSelectedNominalSMsToSmvFilesCommand"
             id="org.polarsys.chess.smvExport.commands.ExportSelectedNominalSMsToSmvFilesCommand"
             name="Export state machines of Selected Component as .smv files">
       </command>
