updated for unit tests

--- a/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
@@ -258,6 +258,16 @@
                optional="true"
                values="invar, ltlspec, ctl">
          </commandParameter>
+         <commandParameter
+               id="projectPath"
+               name="projectPath"
+               optional="true">
+         </commandParameter>
+         <commandParameter
+               id="isProgrExec"
+               name="isProgrExec"
+               optional="true">
+         </commandParameter>
          
       </command>
       <command
@@ -279,6 +289,16 @@
             defaultHandler="org.polarsys.chess.verificationService.commands.CompositeContractImplementationCommand"
             id="org.polarsys.chess.verificationService.commands.CompositeContractImplementationCommand"
             name="Check Composite Contract Implementation on selected component">
+      </command>
+      <command
+            defaultHandler="org.polarsys.chess.verificationService.commands.TestCommand"
+            id="org.polarsys.chess.verificationService.commands.TestCommand"
+            name="TestCommand">
+      </command>
+      <command
+            defaultHandler="org.polarsys.chess.verificationService.commands.TestCommand2"
+            id="org.polarsys.chess.verificationService.commands.TestCommand2"
+            name="TestCommand2">
       </command>
    </extension> 
 </plugin>
