--- a/plugins/org.polarsys.chess.diagramsCreator/.project
+++ b/plugins/org.polarsys.chess.diagramsCreator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.polarsys.chess.OSSImporter</name>
+	<name>org.polarsys.chess.diagramsCreator</name>
 	<comment></comment>
 	<projects>
 	</projects>
